# zoxapp

./: .gitignore  SETUP.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  test_paths.rs
src-tauri/src/agent/: actor.rs  history.rs  memory.rs  mod.rs  parser.rs  rag.rs  summarizer.rs  tools.rs  tools_test.rs  workspace.rs
src-tauri/src/agent/actor/: context.rs  core.rs  mod.rs  prompts.rs  tool_executor.rs
src-tauri/src/commands/: agent_cmds.rs  file_cmds.rs  mod.rs  setup_cmds.rs  update_cmds.rs
src-tauri/src/hardware/: gpu.rs  mod.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/cloud/: cascade.rs  client.rs  mod.rs  router.rs
src-tauri/src/providers/local/: client.rs  mod.rs
src-tauri/src/setup/: downloader.rs  extractor.rs  mod.rs  paths.rs
src-tauri/src/state/: app_state.rs  mod.rs
src/components/Agent/: ApprovalModal.tsx
src/components/Chat/: ChatPanel.tsx  MessageBubble.tsx  MessageList.tsx  SmartInputBox.tsx  ThinkingIndicator.tsx  ToolInvocation.tsx  VirtualizedMessageList.tsx
src/components/Common/: CommandPalette.tsx  ConnectionToggle.tsx  MarkdownRenderer.tsx  ModelMemoryDisplay.tsx  StreamingProgress.tsx
src/components/Editor/: DiffView.tsx  (+2 more)
src/hooks/: useAgent.ts  usePerformanceMonitor.ts  useRequestDeduplication.ts  useUpdater.ts
src/lib/: commands.ts  eventBus.ts
src/stores/: useAgentStore.ts
(+20 files in other folders)
